crates/templates/tests/snapshots/check_dependencies__impl-5.snap
---
source: crates/templates/tests/check_dependencies.rs
description: Should support optional dependencies
expression: output
---

  if ! command -v git curl make >/dev/null 2>&1; then
    printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Missing dependency: scm" "(gitcurlmake)" >&2
    dependencies="git|curl|make"
    printf "Install with: \e[32mgem install $dependencies\e[0m\n\n" >&2
    exit 1
  else
    deps["scm"]="$(command -v git curl make | head -n1)"
  fi

